# udev-drive-monitor

./: README.md  pyproject.toml  udevmonitor.py
